# docker-servers-api

./: .dockerignore  .env.example  .gitignore  Makefile  TODO  docker-compose.yml  pyproject.toml  test.py
docker/: Dockerfile  taskiqDockerfile
src/: api.py  configuration.py  create_app.py  exceptions.py  logging.py  main.py
src/commands/: console.py  controller.py  models.py  service.py  utils.py
src/core/database/: core.py
src/database/: __init__.py  base.py  core.py  database.py
src/docker/: manager.py
src/entities/: __init__.py  server.py
src/exceptions/: DatabaseExceptions.py  DockerExceptions.py  __init__.py
src/models/: ServerModel.py
src/repositories/: ServerRepository.py  __init__.py
src/routers/v1/: CommandRouter.py  ServerRouter.py
src/schemas/pydantic/: CommandSchema.py  ServerSchema.py  __init__.py
src/server/: __init__.py  console.py  manager.py
src/servers/: controller.py  depends.py  manager.py  models.py  repository.py  service.py  utils.py
src/servers/099cbcc5-ca1a-4344-b675-c84eac20f2e8/: .rcon-cli.env  .rcon-cli.yaml  eula.txt  server.properties
src/servers/099cbcc5-ca1a-4344-b675-c84eac20f2e8/world/: level.dat_old
src/servers/099cbcc5-ca1a-4344-b675-c84eac20f2e8/world/region/: r.0.-1.mca  r.0.0.mca
src/servers/31e160c8-c5c9-450f-bdfb-c4bf9513d81b/: .rcon-cli.env  .rcon-cli.yaml  eula.txt  server.properties
src/servers/31e160c8-c5c9-450f-bdfb-c4bf9513d81b/world/: level.dat_old
src/servers/31e160c8-c5c9-450f-bdfb-c4bf9513d81b/world/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
src/servers/38996459-4c04-4eca-9d86-06abe2b364c4/: .rcon-cli.env  .rcon-cli.yaml  eula.txt  server.properties
src/servers/38996459-4c04-4eca-9d86-06abe2b364c4/world/: level.dat_old
src/servers/38996459-4c04-4eca-9d86-06abe2b364c4/world/region/: r.0.-1.mca  r.0.0.mca
src/servers/9c62ba9a-3b2a-4e82-b210-6108f0b0fd6d/: .rcon-cli.env  .rcon-cli.yaml  eula.txt  server.properties
src/servers/9c62ba9a-3b2a-4e82-b210-6108f0b0fd6d/world/: level.dat_old
src/servers/9c62ba9a-3b2a-4e82-b210-6108f0b0fd6d/world/entities/: r.0.-1.mca
src/servers/9c62ba9a-3b2a-4e82-b210-6108f0b0fd6d/world/poi/: r.0.-1.mca  r.1.-1.mca
src/servers/9c62ba9a-3b2a-4e82-b210-6108f0b0fd6d/world/region/: r.0.-1.mca  (+3 more)
src/servers/a15894bd-ce0e-4b05-871d-c8b5942cf83e/: .rcon-cli.env  .rcon-cli.yaml  eula.txt  server.properties
src/servers/a15894bd-ce0e-4b05-871d-c8b5942cf83e/world/: level.dat_old
src/services/: ConsoleService.py  ServerService.py  __init__.py
src/tasks/: __init__.py  manager_tasks.py  taskiq_broker.py
src/utils/: __init__.py  container_cfg.py  generate_creds.py  work_with_files.py
static/: server.properties.template
(+2 files in other folders)
